[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Item.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Silkscreen.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/gui/inventory/item-info.png" type="Texture" id=3]
[ext_resource path="res://Assets/partikels/spotlight_1.png" type="Texture" id=4]

[node name="Item" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="ItemInfo" type="Sprite" parent="."]
visible = false
position = Vector2( 78, -13 )
scale = Vector2( 0.8, 0.8 )
z_index = 2
texture = ExtResource( 3 )

[node name="ItemName" type="Label" parent="ItemInfo"]
margin_left = -62.0
margin_top = -34.0
margin_right = 65.0
margin_bottom = -13.0
rect_scale = Vector2( 0.977794, 0.781536 )
custom_fonts/font = ExtResource( 2 )
text = "TEST"
align = 1

[node name="Type" type="Label" parent="ItemInfo"]
margin_left = -58.75
margin_top = -13.75
margin_right = -6.75
margin_bottom = 7.25
rect_scale = Vector2( 0.413497, 0.42345 )
custom_fonts/font = ExtResource( 2 )
text = "Type:"

[node name="ItemType" type="Label" parent="ItemInfo"]
margin_left = -31.25
margin_top = -13.75
margin_right = 42.75
margin_bottom = 7.25
rect_scale = Vector2( 0.515628, 0.481077 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Weapon"

[node name="Damage" type="Label" parent="ItemInfo"]
margin_left = -58.75
margin_top = -2.5
margin_right = -6.75
margin_bottom = 18.5
rect_scale = Vector2( 0.378537, 0.403674 )
custom_fonts/font = ExtResource( 2 )
text = "Damage:"

[node name="DamageAmount" type="Label" parent="ItemInfo"]
margin_left = -26.25
margin_top = -2.5
margin_right = 47.75
margin_bottom = 18.5
rect_scale = Vector2( 0.519771, 0.459003 )
custom_colors/font_color = Color( 0.639216, 0.0117647, 0.0117647, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Description" type="Label" parent="ItemInfo"]
margin_left = -58.75
margin_top = 6.25
margin_right = -6.75
margin_bottom = 27.25
rect_scale = Vector2( 0.413497, 0.42345 )
custom_fonts/font = ExtResource( 2 )
text = "Description:"

[node name="DescriptionType" type="Label" parent="ItemInfo"]
margin_left = -58.75
margin_top = 16.25
margin_right = 15.25
margin_bottom = 37.25
rect_scale = Vector2( 0.515628, 0.481077 )
custom_colors/font_color = Color( 0.0313726, 0.0235294, 0.0235294, 1 )
custom_fonts/font = ExtResource( 2 )
text = "187"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 43.0
rect_scale = Vector2( 0.8, 0.8 )
mouse_filter = 2

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = 41.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
text = "99"

[node name="spotlight" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 17, 14 )
scale = Vector2( 0.0491429, 0.048043 )
z_index = -1
texture = ExtResource( 4 )
